@@ -7,8 +7,12 @@ plugins {
 sourceCompatibility = 11
 
 javafx {
-    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
+    // version = "11.0.2"
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.swing' ]
 }
+
+// this vm argument is important to make the "controlsfx" dependency work 
+applicationDefaultJvmArgs = ["--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED"]
 
 mainClassName = 'de.hfu.pms.NewGuiTest'
 
@@ -17,12 +21,15 @@ dependencies {
     
     compile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.8'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
-    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.8'
+
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
 
     compile 'org.kordamp.ikonli:ikonli-javafx:11.3.4'
     compile 'org.kordamp.ikonli:ikonli-fontawesome-pack:11.3.4'
 
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
